@@ -1,3 +1,4 @@
 gtkhtml-sharp.dll
 generated
+generated-stamp
 Makefile
