@@ -232,7 +232,7 @@
       <member cname="GTK_HTML_STREAM_OK" name="Ok"/>
       <member cname="GTK_HTML_STREAM_ERROR" name="Error"/>
     </enum>
-    <callback name="HTMLPrintCallback" cname="GtkHTMLPrintCallback" hidden="1">
+    <callback name="HTMLPrintCallback" cname="GtkHTMLPrintCallback">
       <return-type type="void"/>
       <parameters>
         <parameter type="GtkHTML*" name="html"/>
@@ -651,13 +651,13 @@
           <parameter type="gboolean" name="as_cite"/>
         </parameters>
       </method>
-      <method name="Print" cname="gtk_html_print" hidden="1">
+      <method name="Print" cname="gtk_html_print">
         <return-type type="void"/>
         <parameters>
           <parameter type="GnomePrintContext*" name="print_context"/>
         </parameters>
       </method>
-      <method name="PrintGetPagesNum" cname="gtk_html_print_get_pages_num" hidden="1">
+      <method name="PrintGetPagesNum" cname="gtk_html_print_get_pages_num">
         <return-type type="gint"/>
         <parameters>
           <parameter type="GnomePrintContext*" name="print_context"/>
@@ -665,13 +665,13 @@
           <parameter type="gdouble" name="footer_height"/>
         </parameters>
       </method>
-      <method name="PrintSetMaster" cname="gtk_html_print_set_master" hidden="1">
+      <method name="PrintSetMaster" cname="gtk_html_print_set_master">
         <return-type type="void"/>
         <parameters>
           <parameter type="GnomePrintJob*" name="print_master"/>
         </parameters>
       </method>
-      <method name="PrintWithHeaderFooter" cname="gtk_html_print_with_header_footer" hidden="1">
+      <method name="PrintWithHeaderFooter" cname="gtk_html_print_with_header_footer">
         <return-type type="void"/>
         <parameters>
           <parameter type="GnomePrintContext*" name="print_context"/>
