@@ -1891,31 +1891,6 @@
    </data>
 </rule>
 
-<!-- Hides related to gtkhtml and gnomeprint Can be removed when gtkhtml get its own assembly -->
-<rule>
-  <class name="GtkHTML">
-    <method>PrintWithHeaderFooter</method>
-    <method>PrintSetMaster</method>
-    <method>Print</method>
-    <method>PrintGetPagesNum</method>
-  </class>
-  <data>
-    <attribute target="method">
-      <name>hidden</name>
-      <value>1</value>
-    </attribute>
-  </data>
-</rule>
-<rule>
-  <class name="GtkHTMLPrintCallback"/>
-  <data>
-    <attribute target="class">
-      <name>hidden</name>
-      <value>1</value>
-    </attribute>
-  </data>
-</rule>
-
 <!-- overloads -->
 <rule>
   <class name="GtkBox">
