@@ -1,3 +1,9 @@
+2003-10-07  Mike Kestner  <mkestner@ximian.com>
+
+	* gtkhtml/Makefile.in : add gnome api to includes and ref in build
+	* gtkhtml/gkthtml-api.xml : regenerated
+	* sources/Gtk.metadata : remove the gtkhtml gnomeprint hides
+
 2003-10-06  Mike Kestner  <mkestner@ximian.com>
 
 	* Makefile.in : add gtkhtml dir.
